# deconlib

./: .gitignore  CORE_OPERATORS_NOTES.md  DEcon_lib.py  DOCS_SETUP.md  README.md  TODO-refactor.md  TODO.md  TOFIX.md  mem_deconvolution-2.md  mkdocs.yml  psf_implementation_spec.md  pyproject.toml
deconlib/: __init__.py  domains.py  io.py  memsolve_io.py  workflow.py
deconlib/aberrations/: base.py  geometric.py  zernike.py
deconlib/algorithms/: __init__.py  phase_retrieval.py
deconlib/compute/: __init__.py  confocal.py  otf.py  psf.py  pupil.py
deconlib/core/: __init__.py  optics.py  pupil.py
deconlib/deconvolution/: CORE_OPERATORS_NOTES.md  __init__.py  base.py  blind.py  chambolle_pock.py  composition.py  core_operators.py  erdecon_mlx.py  forward_model.py  jetnewton_mlx.py  linops_core_mlx.py  linops_mlx.py  mem.py  metric_weighted_tv.py  nlcg_mlx.py  operators.py  operators_mlx.py  pdhg_mlx.py  psf_extraction.py  rl.py  rl_mlx.py  shapes.py  sicg.py  test_core_operators.py  tile_processing.py  wavelets.py
deconlib/math/: __init__.py  fourier.py  zernike.py
deconlib/mem/: __init__.py  recipes.py  types.py
deconlib/operators/: __init__.py  io.py
deconlib/psf/: __init__.py  confocal.py  distillation.py  optics.py  pupil.py  retrieval.py  retrieval_mlx.py  widefield.py
deconlib/psf/aberrations/: __init__.py  base.py  geometric.py  zernike.py  zernike_refine_mlx.py
deconlib/psf/pupil_retrieval/: __init__.py  io.py  retrieval.py  (+1 more)
deconlib/solvers/: __init__.py  convenience.py  richardson_lucy.py  types.py
deconlib/utils/: __init__.py  fourier.py  objects.py  padding.py  zernike.py
deconlib/workflows/: __init__.py  mem.py  rl.py  types.py  wavelet.py
docs/: index.md  vectorial_psf_plan.md
docs/api/: deconvolution.md  index.md  utils.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: aberrations.md  confocal.md  deconvolution.md  distillation.md  phase-retrieval.md  psf.md
examples/: RECIPES.md  fair_compare_pupil.py  mem_deconlib_helpers.py  otf_compare.py  psf_distillation.py  psf_distillation_cropped.py  psf_distillation_orange.py  pupil_oversample.py  pupil_retrieval.py  pupil_retrieval_sweep.py  run_microtubule_mem_area_integration.py  run_microtubule_rl_area_integration.py  run_microtubule_wavelet_mem_area_integration.py  sanity_check_gs.py  theoretical_psf.py
examples/pupil_retrieval_examples/: __init__.py  fair_compare_pupil.py  pupil_retrieval.py  pupil_retrieval_sweep.py  sanity_check_gs.py  simple_gs.py
plans/: SI-CG_notes.html  metric_weighted_algorithm.md  metric_weighted_tv_implementation.md  sicg_implementation_plan.md
scripts/: DE260626_01.py  DE260626_02_memsolve.py  DE260626_02b_memsolve.py  erdecon_eps_sweep.py  erdecon_regularizer_comparison.py  example_clean_operators.py  memsolve_gaussian_icf.py  memsolve_icf_gamma_sweep.py  psf_distillation_nlcg_demo.py  sweep_forward_aberrations.py  sweep_pupil_retrieval.py  sweep_warmstart.py  test_background.py  test_strong_init.py  tiled_memsolve_demo.py  tiled_nlcg_demo.py  tiled_rl_demo.py  widefield_erdecon_demo.py  widefield_erdecon_realdata_demo.py  widefield_jetnewton_otf_ablation_and_beta_scan.py  widefield_jetnewton_realdata_demo.py  widefield_jetnewton_synthetic_shell_demo.py  widefield_nlcg_demo.py  widefield_rl_demo.py  zernike_refine_dapi_demo.py
tests/: __init__.py  test_anisotropic_hessian.py  test_composition.py  test_confocal.py  test_core_operators.py  test_domains.py  test_erdecon.py  test_forward_model_registration.py  test_io.py  test_jetnewton.py  test_mem_api.py  test_memsolve_io.py  test_metric_weighted_tv.py  test_nlcg.py  test_operators.py  test_operators_mlx_adjoint.py  test_operators_mlx_norms.py  test_pdhg_mlx.py  test_problem_1d.py  test_rl_workflow.py  test_shapes.py  test_shapes_api.py  test_solvers_convenience.py  test_solvers_rl_simple.py  test_solvers_rl_with_padding.py  test_solvers_valid_region.py  test_tile_processing.py  test_vectorial_psf.py  test_vectorial_psf_validation.py  test_wavelet_workflow.py  test_wavelets.py  test_workflow.py  test_zernike_refine.py
toy/: README.md  __init__.py  problems.py  toy_01.py
(+7 files in other folders)
