[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deconlib"
version = "0.3.0"
description = "Optical microscopy PSF computation and deconvolution library"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "D.E." },
]
keywords = [
    "microscopy",
    "deconvolution",
    "psf",
    "otf",
    "optics",
    "phase-retrieval",
    "image-restoration",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "mlx>=0.30.3",
    "numpy>=1.21",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]
all = [
    "pytest>=7.0",
    "pytest-cov",
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["deconlib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
